# data-job-market-benchmark

./: 01_🛠️_Skills.py  Home.py  Makefile  README.md  main.py  pyproject.toml
.streamlit/: config.toml
assets/: style.css
modules/: formater.py  importer.py
pages/: 01_🛠️_Skills.py  02_💸_Salary.py  03_🏥_Health.py  04_🌎_Explore.py
