[project]
name = "data-analyst-streamlit-app-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.1.0",
    "htbuilder>=0.9.0",
    "kagglehub>=1.0.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "streamlit>=1.57.0",
]
